--- a/A7 homework.html
+++ b/A7 homework.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>art</title>
+	<title>home of art</title>
 	<style type="text/css">
 		h1{
 			position: relative;
@@ -9,33 +9,44 @@
 			text-shadow: 5px 5px 5px green;
 			text-align: center;
 			font-size: 70px;
+			
 		}
 		p{
 			font-size: 30px;
 			background-color: green;
-			width: 150px
-			height: 150px
+			width: 800px;
+			height: 150px;
+			color: red;
+			
 
 		}
 		li:hover{
-			background-color: blue;
+			background-color: red;
 			display: inline;
 
+		}
+		u{
+			padding: 20px;
+		}
+		body{
+			background-image:url(https://tse3.mm.bing.net/th?id=OIP.FhviM1uBHSRwOOyoSwuDsgHaEA&pid=Api&P=0&w=282&h=153);
+			background-repeat: no-repeat;
+			background-size: cover;
 		}
 		</style>
 		
 </head>
 <body>
 	<h1>Qazis pallete</h1>
-	<p>Hi and welcome to Qazi's palette,over here we teach your little artists how to paint,sculpt,draw and etc.</p>
-	<p>We aspire to make great artist out of the children who we teach and help on their journey to great sucees and teach them all they need to know about art!</p>
-	<p>In our classes we teach your children to be the best at art and we also provide sessions in which we help them relax and free their minds increasing focuse and creating inner peace</p>
-	<a href="contact%20us.html" target="_blank">contact us</a>
-	<br>
-	<a href="submition%20form.html" target="_blank">submition form</a>
-	<br>
-	<a href="make%20a%20account.html" target="_blank">make account</a>
-	<br>
-	<a href="contact%20us.html" target="_blank">information about us</a>
+	<p><i>Hi and welcome to Qazi's palette,over here we teach your little artists how to paint,sculpt,draw and etc.</i></p>
+	<p><i>We aspire to make great artist out of the children who we teach and help on their journey to great sucees and teach them all they need to know about art!</i></p>
+	<p><i>In our classes we teach your children to be the best at art and we also provide sessions in which we help them relax and free their minds increasing focuse and creating inner peace</i></p>
+	<li><a href="contact%20us.html" target="_blank">contact us</a>
+	<li><a href="submition%20form.html" target="_blank">submition form</a></li>
+	<li><a href="make%20a%20account.html" target="_blank">make account</a></li>
+	<li><a href="file:///C:/Users/QAZI%20AHMED%20KHAN/Desktop/all%20you%20need%20to%20know.html" target="_blank">information about us</a></li>
+
+	
+
 </body>
 </html>
