--- a/all you need to know.html
+++ b/all you need to know.html
@@ -11,12 +11,18 @@
 		p{
 			background-color: red;
 			font-size: 25px;
+			color: blue;
+		}
+		body{
+			background-image:url(https://tse2.mm.bing.net/th?id=OIP.kaje20fgSXZQp-AaAeByWwHaEK&pid=Api&P=0&w=286&h=162);
+			background-repeat: no-repeat;
+			background-size: cover;
 		}
 	</style>
 </head>
 <body>
       <h1>ALL YOU NEED TO KNOW</h1>
-      <p>Hi,This is qazi here from Qazi's pallete wanting to say when you enrole your children into our classes we make sure they get the best amount of knowledge about art and make them be the best and help them to great sucess to be big artist, we make them do:Sculpting,pastel drawing,poster colors,water colors and hand painting and many more as they progress.we also have special lessons for making inner peace and calming them down being able to put a lot of focuse into anything they do and meditation classes.We here love to teach children and we teach them how to draw and paint the correct way and give them techniques which can make drastic improvements to know more click this link where you can have a word with us</p>
+      <p><i>Hi,This is qazi here from Qazi's pallete wanting to say when you enrole your children into our classes we make sure they get the best amount of knowledge about art and make them be the best and help them to great sucess to be big artist, we make them do:Sculpting,pastel drawing,poster colors,water colors and hand painting and many more as they progress.we also have special lessons for making inner peace and calming them down being able to put a lot of focuse into anything they do and meditation classes.We here love to teach children and we teach them how to draw and paint the correct way and give them techniques which can make drastic improvements to know more click this link where you can have a word with us,you will need a account so we can verify who you are and you are authentic.we take serious care of the information you provide us and keep it to our self only for the purpose of the class we take information which is manditory.we focuse on making a inner peace in our students and help increasing their focuse to put thier full minds into what ever they do,we have helped and sent some students for natinal art competitions and have come back victorious with a beautiful painting or sculpture and we help every student acomplish the same.</i></p>
       	<a href="file:///C:/Users/QAZI%20AHMED%20KHAN/Desktop/contact%20us.html" target="_blank">click this to know more</a>
 </body>
 </html>
