--- a/submition form.html
+++ b/submition form.html
@@ -9,15 +9,21 @@
 			font-size: 80px;
 		}
 		p{
-			font-size: 40px
+			font-size: 40px;
 			background-color: orange;
+			color: purple;
 
+		}
+		body{
+			background-image:url(https://tse4.mm.bing.net/th?id=OIP.luRgPxVAtMoq8rHVA6qZ7wHaEK&pid=Api&P=0&w=286&h=162s);
+			background-repeat: no-repeat;
+			background-size: cover;
 		}
 	</style>
 </head>
 <body>
       <h1>Submition form</h1>
-      <p>if you want to enrole your child into our classes then please fill the form below</p>
+      <p><i>if you want to enrole your child into our classes then please fill the form below</i></p>
       <input type="text" name="name" placeholder="name">
       <br>
       <input type="email" name="email" placeholder="email">
